Change api to thrift protocal

--- a/webfront/src/js/app/result/template/result.tpl.html
+++ b/webfront/src/js/app/result/template/result.tpl.html
@@ -3,14 +3,16 @@
   <div class="content">Result</div>
 </h2>
 
-<div class="doubling stackable five column ui grid container" ng-controller="ResultController as result">
+<div class="doubling stackable five column ui grid container"
+  ng-controller="ResultController as result"
+  ng-init="getResult()">
   <div class="column" ng-repeat="day in result">
     <h4 class="ui top attached segment header center aligned" ng-class="day.color">
       {{day.day}}
     </h4>
     <div class="ui segment attached">
       <div class="ui divided items">
-      <div ng-repeat="member in day.member">
+      <div ng-repeat="member in day.members">
         <div class="ui tiny circular image middle aligned"  style="padding:4px; width:100px;">
           <img src="http://semantic-ui.com/images/wireframe/square-image.png">
         </div>
