Add Result by Day

--- a/webfront/src/js/app/assign/template/assign.tpl.html
+++ b/webfront/src/js/app/assign/template/assign.tpl.html
@@ -1,10 +1,25 @@
-<div class="ui divider">
+<div ng-init="checkState()">
+
+  <div class="ui grid one column center aligned" >
+    <h1 class="ui column">
+       {{message}}
+    </h1>
+  </div>
+
+<div class="ui grid one column center aligned" ng-show="!result">
+  <div class="ui column">
+      <img class="ui center aligned" src="./images/Hat_Sorting.JPG" />
+  </div>
+  <div class="ui column">
+    <img class="ui center aligned" ng-src="{{'./images/member/' + member.pic}}" style="width:200px; height:200px;" />
+  </div>
 </div>
+
 <div class="ui grid five column center aligned">
 <div class="ui column" ng-repeat="member in result">
-<div class="ui card" >
+<div class="ui card" style="width:200px" >
   <div class="image">
-    <img src="http://semantic-ui.com/images/wireframe/square-image.png">
+    <img ng-src="{{'./images/member/' + member.pic}}" style="width:200px; height:200px;">
   </div>
   <div class="content">
     <a class="header">{{member.name}}</a>
@@ -15,8 +30,10 @@
 </div>
 </div>
 </div>
-<div ng-init="checkState()" class="ui grid one column center aligned">
+
+<div class="ui grid one column center aligned" ng-show="!result">
   <div class="ui column">
-      <button class="ui red massive button" ng-click="assignDay()">Start Random</button>
+      <button class="ui red massive button" ng-click="assignDay()">เริ่มคัดสรร</button>
   </div>
+</div>
 </div>
