--- a/webfront/src/js/app/assign/template/assign.tpl.html
+++ b/webfront/src/js/app/assign/template/assign.tpl.html
@@ -6,7 +6,7 @@
     </h1>
   </div>
 
-<div class="ui grid one column center aligned" ng-show="!result">
+<div class="ui grid one column center aligned">
   <div class="ui column">
       <img class="ui center aligned" src="./images/Hat_Sorting.JPG" />
   </div>
@@ -15,23 +15,8 @@
   </div>
 </div>
 
-<div class="ui grid five column center aligned">
-<div class="ui column" ng-repeat="member in result">
-<div class="ui card" style="width:200px" >
-  <div class="image">
-    <img ng-src="{{'./images/member/' + member.pic}}" style="width:200px; height:200px;">
-  </div>
-  <div class="content">
-    <a class="header">{{member.name}}</a>
-    <div class="meta">
-      <span>{{member.day}}</span>
-    </div>
-  </div>
-</div>
-</div>
-</div>
 
-<div class="ui grid one column center aligned" ng-show="!result">
+<div class="ui grid one column center aligned">
   <div class="ui column">
       <button class="ui red massive button" ng-click="assignDay()">เริ่มคัดสรร</button>
   </div>
